# personreid_agents

./: pyproject.toml
core/: config.py  data_structures.py
modules/: constraint_rerank.py  identity_retrieval.py  question_selection.py
personreid_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_constraint_reranker.py  test_data_structures.py  test_identity_retriever.py
