[project]
name = "personreid-agents"
version = "0.1.0"
description = "Interactive Forensic Person ReID Agents"
requires-python = ">=3.9"

dependencies = [
  "numpy>=1.21.0",
  "torch>=1.10.0",
  "torchvision>=0.11.0",
  "Pillow>=8.3.0",
  "scipy>=1.7.0",
  "pandas>=1.3.0",
  "tqdm>=4.62.0",
  "matplotlib>=3.4.0",
  "seaborn>=0.11.0",

  # Git dependency (CLIP)
  "clip @ git+https://github.com/openai/CLIP.git",
]

[dependency-groups]
dev = [
  "pytest",
  "black",
  "ruff",
  "ipykernel"
]
